Add proper-arows plugin

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"description": "The linter used by Geostart projects",
 	"main": "index.js",
 	"dependencies": {
+		"@getify/eslint-plugin-proper-arrows": "^5.0.2",
 		"babel-eslint": "^8.2.1",
 		"eslint": ">4",
 		"eslint-config-mourner": "^2.0.3",
